# xG-calculator

./: LICENSE  README.md  TROUBLES.md  installer.bat  pyproject.toml  requirements.txt  xg_gui_rf_validated_final.py
model/: model_xg_rf.pkl
